Bug 104345 - [Shadow] HTMLContentElement::getDistributedNodes() doesn't work correctly if not in document tree.
Summary: [Shadow] HTMLContentElement::getDistributedNodes() doesn't work correctly if ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on: 104346
Blocks: 97279
  Show dependency treegraph
 
Reported: 2012-12-06 23:25 PST by Shinya Kawanaka
Modified: 2012-12-12 18:12 PST (History)
3 users (show)

See Also:


Attachments
Patch (6.13 KB, patch)
2012-12-11 22:21 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (6.14 KB, patch)
2012-12-12 00:24 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch for landing (6.18 KB, patch)
2012-12-12 17:11 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-12-06 23:25:50 PST
Since we're using updateLayout() for distribution, elements not in document tree cannot ensure distribution.

See also Bug 104218
Comment 1 Shinya Kawanaka 2012-12-11 22:21:13 PST
Created attachment 178967 [details]
Patch
Comment 2 Shinya Kawanaka 2012-12-11 22:21:40 PST
This patch can be applied after Bug 104218 is resolved.
Comment 3 Shinya Kawanaka 2012-12-12 00:24:28 PST
Created attachment 178989 [details]
Patch
Comment 4 Hajime Morrita 2012-12-12 15:48:29 PST
Comment on attachment 178989 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=178989&action=review

> LayoutTests/fast/dom/shadow/get-distributed-nodes-orphan.html:56
> +debug('rootChild is disconnected. Now content became inactive, so it should be distributed.');

should "not" be?
Comment 5 Shinya Kawanaka 2012-12-12 16:57:03 PST
(In reply to comment #4)
> (From update of attachment 178989 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=178989&action=review
> 
> > LayoutTests/fast/dom/shadow/get-distributed-nodes-orphan.html:56
> > +debug('rootChild is disconnected. Now content became inactive, so it should be distributed.');
> 
> should "not" be?

Sorry, I wanted to say the content element itself should be distributed.
I'll update the ChangeLog anyway.
Comment 6 Shinya Kawanaka 2012-12-12 17:11:03 PST
Created attachment 179155 [details]
Patch for landing
Comment 7 WebKit Review Bot 2012-12-12 18:12:02 PST
Comment on attachment 179155 [details]
Patch for landing

Clearing flags on attachment: 179155

Committed r137552: <http://trac.webkit.org/changeset/137552>
Comment 8 WebKit Review Bot 2012-12-12 18:12:05 PST
All reviewed patches have been landed.  Closing bug.