[Shadow] HTMLContentElement::getDistributedNodes() doesn't work correctly if not in document tree. https://bugs.webkit.org/show_bug.cgi?id=104345

Reviewed by Hajime Morita.

Source/WebCore:

Since document->updateLayout() does affect nodes in Document, distribution will not occur in
InsertionPoints out of Document. We have to find the element in document tree scope, and start distribution from it.

Test: fast/dom/shadow/get-distributed-nodes-orphan.html

* html/shadow/InsertionPoint.cpp:
(WebCore::InsertionPoint::getDistributedNodes):

LayoutTests:

* fast/dom/shadow/get-distributed-nodes-orphan-expected.txt: Added.
* fast/dom/shadow/get-distributed-nodes-orphan.html: Added.


Canonical link: https://commits.webkit.org/123101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137552 268f45cc-cd09-0410-ab3c-d52691b4dbfc